Stop date range button click causing layout shift

--- a/kahuna/public/js/components/gu-date-range/gu-date-range.css
+++ b/kahuna/public/js/components/gu-date-range/gu-date-range.css
@@ -16,6 +16,11 @@
     margin-left: 5px;
 }
 
+.gu-date-range__icon {
+    display: inline-block;
+    width: 9px;
+}
+
 .gu-date-range__overlay__title {
     margin-bottom: 5px;
 }
